<resources>
    <string name="app_name">Contakts</string>
    <string name="contact">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Find contact</string>
    <string name="title_activity_main">Contakts</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
    <string name="app_id">464083147027207</string>
    <string name="title_activity_fb">FBActivity</string>
    <string name="title_activity_linked_in">LinkedInActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_friend_detail">FriendDetailActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="color_dialog_title">Pick theme</string>
    <string name="title_activity_li">LIActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="themeButton">Theme</string>
    <string name="themeButtonInfo">Change the look of the app to your liking by
         picking a theme of your choice!</string>
    <string name="welcomeInfo">Contakts is a beautiful new way to connect with
         everyone that matters to you.\n\nSimply swipe right anywhere on the screen
          to slide out the navigation menu and start connecting with everyone!</string>
    <string name="fbInfo">No personal information is ever collected or stored by Contakts.</string>
    <string name="admob_id">a152f39c37b61f7</string>
    <string name="title_activity_frequent">FrequentActivity</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_dialer">DialerActivity</string>
    <string name="okay">Okay</string>
    <string name="custom">Custom</string>
    <string name="other">Other</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="error">Error</string>
    <string name="sMfavourites">Favourites</string>
    <string name="sMRecent">Recents</string>
    <string name="sMMostContacted">Most Contacted</string>
    <string name="sMPhoneContacts">Phone Contacts</string>
    <string name="sMGroups">Groups</string>
    <string name="sMGoogleContacts">All Contacts</string>
    <string name="sMShuffle">Shuffle</string>
    <string name="sMFacebook">Facebook</string>
    <string name="sMSettings">Settings</string>
    <string name="sMAbout">About</string>
    <string name="cdDialogHeader">Contact Details</string>
    <string name="cdWelcomeDialog">Here you can see all data associated with a contact. Simply tap on any item and learn more about it.</string>
    <string name="callDialogText">Call</string>
    <string name="messageDialogText">Message</string>
    <string name="emailDialogText">Email</string>
    <string name="noPhoneDialogText">does not have any phone numbers</string>
    <string name="noEmailDialogText">does not have any email addresses</string>
    <string name="noWhatsAppDialogText">does not have any phone number associated with WhatsApp</string>
    <string name="assistant">Assistant</string>
    <string name="brother">Brother</string>
    <string name="child">Child</string>
    <string name="domPartner">Domestic Partner</string>
    <string name="father">Father</string>
    <string name="friend">Friend</string>
    <string name="manager">Manager</string>
    <string name="mother">Mother</string>
    <string name="parent">Parent</string>
    <string name="partner">Partner</string>
    <string name="refBy">Referred By</string>
    <string name="relative">Relative</string>
    <string name="sister">Sister</string>
    <string name="spouse">Spouse</string>
    <string name="anniversary">Anniversary</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="home">Home</string>
    <string name="work">WORK</string>
    <string name="mobile">Mobile</string>
    <string name="googleMapWarning">Google Map not visible. You are not connected to the Internet</string>
    <string name="shareWith">Share with</string>
    <string name="whatsAppNotFound">WhatsApp is not installed</string>
    <string name="notesHeader">NOTES</string>
    <string name="imHeader">IM</string>
    <string name="eventsHeader">EVENTS</string>
    <string name="relationshipHeader">RELATIONSHIP</string>
    <string name="addressHeader">ADDRESS</string>
    <string name="websiteHeader">WEBSITE</string>
    <string name="emailHeader">EMAIL</string>
    <string name="phoneHeader">PHONE</string>
    <string name="favDialogHeader">Hello!</string>
    <string name="favDialogText">Swiping right reveals the navigation menu, and swiping left reveals an extra tweaks menu which can be used to customize your experience.\n\nThere is a seperate tweaks menu for every screen, giving you complete flexibility in customization.</string>
    <string name="remFav">Remove Favourite</string>
    <string name="confirmRemFav">Are you sure you want to remove this contact from your favourites?</string>
    <string name="fbDialogText">If this is your first time accessing Facebook on Contakts, please go to Settings and login first.</string>
    <string name="notLoggedInFB">You have not logged into a Facebook account</string>
    <string name="loggedOutofFB">Logged out of Facebook</string>
    <string name="fbFriendHeader">Facebook Friends</string>
    <string name="freqDialogHeader">Frequent Contacts</string>
    <string name="freqDialogText">Here you can see all the contacts that are most frequently contacted.</string>
    <string name="mostContactedHeader">Most Contacted</string>
    <string name="friendDialogHeader">Friend Details</string>
    <string name="friendDialogText">Here you can see all data associated with a Facebook friend. Simply tap on any item and learn more about it.\n\nIf there are any phone numbers, or email addresses associated with a friend, they will show up here.</string>
    <string name="wish">Wish</string>
    <string name="happyBday">a Happy Birthday!</string>
    <string name="usesContakts">uses Contakts</string>
    <string name="username">USERNAME</string>
    <string name="education">EDUCATION</string>
    <string name="curLoc">CURRENT LOCATION</string>
    <string name="hometown">HOMETOWN</string>
    <string name="homepage">Homepage</string>
    <string name="blog">Blog</string>
    <string name="profile">Profile</string>
    <string name="fax_home">Fax (home)</string>
    <string name="fax_work">Fax (work)</string>
    <string name="pager">Pager</string>
    <string name="callback">Callback</string>
    <string name="car">Car</string>
    <string name="company_main">Company (main)</string>
    <string name="main">Main</string>
    <string name="radio">Radio</string>
    <string name="telex">Telex</string>
    <string name="work_mobile">Work (mobile)</string>
    <string name="work_pager">Work (pager)</string>
    <string name="mms">MMS</string>
    <string name="graphDialogHeader">Contact Graphs</string>
    <string name="graphDialogText">Visualize the top 10 people you connect with most, via phone, messaging, and email, combined to give a raw score.\n\n\nYou can also list all frequent contacts by tapping on the list icon at the top.</string>
    <string name="currentVersion">Current Version: </string>
    <string name="currentVersionNA">Current Version: Not Available</string>
    <string name="shareWithFriends">Share with your friends</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="rateOnPlay">Rate on Google Play</string>
    <string name="website">Website</string>
    <string name="tos">Terms of Service</string>
    <string name="shareMarketingText">Connect with everyone, easily.\nContakts is a beautiful new way to get in touch with people that matter to you most.\nGet it today: www.contaktsapp.com</string>
    <string name="getStarted">Get Started</string>
    <string name="settingThings">setting things up...</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="title_activity_fbsearch">FBSearchActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="removeAds">Remove Ads</string>
    <string name="generalHeader">GENERAL</string>
    <string name="facebookHeader">FACEBOOK</string>
    <string name="title_activity_fbmap">FBMapActivity</string>
    <string name="delete">Delete</string>
    <string name="dialerNotFound">A Dialer application was not found</string>
    <string name="emptyFavs">You do not have any favourite contacts. Why not add some?</string>
    <string name="emptyFavsInfo">Swipe right on the screen to open menu</string>
    <string name="hello">Hello</string>
    <string name="enableWhatsApp">Enable WhatsApp integration</string>
    <string name="addNotFound">Unable to add contact. Use stock contacts app on your device to add contact.</string>
    <string name="editNotFound">Unable to edit contact. Use stock contacts app on your device to edit contact.</string>
    <string name="call">Call</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_recent">RecentActivity</string>
    <string name="noPhoneNumber">No phone number found</string>
    <string name="noPhoneContact">Number not associated with a phone contact</string>
    <string name="deleteMessage">Are you sure you want to delete this contact?</string>
    <string name="deleteTitle">Delete</string>
    <string name="recDialogHeader">Recently Contacted</string>
    <string name="recMsg1">People you recently interacted with are presented here.\n\n</string>
    <string name="recMsg5">You can also long-press on an item and call directly.\n\nTo view a graph of your call log, tap on the \'Extra Options\' button at the top.</string>
    <string name="emptyFreqs">You do not enough interactions with people to populate frequents list.</string>
    <string name="clearRecents">Clear Logs</string>
    <string name="clearLogs">Are you sure you want to clear call history?</string>
    <string name="emptyRecs">Call Log is empty.</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>
    <string name="contactCountLabel">Contacts</string>
    <string name="emptyGroups">No people in this group.</string>
    <string name="newGroup">New Group</string>
    <string name="deleteGroupMessage">Are you sure you want to delete this group?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="emptyGroupInfo">To add people to a group, select a contact, then edit it, and select a group for that contact.</string>
    <string name="youtubeheader">YouTube</string>
    <string name="androidheader">Starred in Android</string>
    <string name="contactsheader">My Contacts</string>
    <string name="googleplusheader">Google+ circles</string>
    <string name="friendsheader">Friends</string>
    <string name="familyheader">Family</string>
    <string name="coworkerheader">Coworkers</string>
    <string name="groupDialogHeader">Group Details</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="frequency">Frequency</string>
    <string name="recency">Recency</string>
    <string name="clean">Clean</string>
    <string name="funky">Funky</string>
    <string name="sortHeader">SORT ORDER</string>
    <string name="showHeader">SHOW CALL TYPE</string>
    <string name="allCalls">All Calls</string>
    <string name="missCalls">Missed Calls</string>
    <string name="inCalls">Incoming Calls</string>
    <string name="outCalls">Outgoing Calls</string>
    <string name="num_asc">Increasing Count</string>
    <string name="num_desc">Decreasing Count</string>
</resources>