<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/favLayout" >
    
        <com.google.android.gms.ads.AdView android:id="@+id/adView"
        				 xmlns:ads="http://schemas.android.com/apk/res-auto"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         ads:adUnitId="@string/admob_id"
                         android:visibility="gone"
                         ads:adSize="SMART_BANNER"/> 
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
   
    <ImageView 
        android:id="@+id/header_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dip"
        android:src="@drawable/ic_nav_star"/>
        
    <TextView
        android:id="@+id/header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#4A4A4A"
        android:textSize="20sp" 
        android:fontFamily="sans-serif-light" 
        android:layout_marginLeft="10dip"
        android:paddingTop="18dip"
        android:paddingBottom="20dip"
        android:text="@string/sMfavourites"/>
  
	</LinearLayout>
    
    <TextView 
        android:id="@+id/emptyFavs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:textSize="22sp"
        android:textColor="#8E8E93"
        android:text="@string/emptyFavs"
        android:visibility="gone"/>
    
	<TextView 
        android:id="@+id/emptyFavsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:textSize="14sp"
        android:textColor="#8E8E93"
        android:text="@string/emptyFavsInfo"
        android:visibility="gone"/>
    
    <GridView 
	    android:id="@+id/favGrid"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginTop="10dip"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
	    android:verticalSpacing="20dp"
	    android:horizontalSpacing="10dp"
	    android:numColumns="auto_fit"
	    android:columnWidth="90dp"
	    android:clipToPadding="false"
	   	android:fitsSystemWindows="true"
	    android:stretchMode="columnWidth"
	    android:gravity="center" 
	    android:paddingBottom="40dip"/>

</LinearLayout>
