<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView
        android:id="@+id/extraScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        
       <LinearLayout 
            android:id="@+id/extraMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dip">
            
	        <TextView 
		        android:id="@+id/sortOrder"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/sortHeader"
		        android:fontFamily="sans-serif-condensed"
		        android:textColor="#0099CC"
		        android:paddingLeft="10dip"
		        android:paddingRight="10dip"
		        android:paddingTop="10dip"
		        android:textSize="20sp" />
	            

		
		    <LinearLayout 
		        android:id="@+id/ascending"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:paddingTop="8dip"
			    android:paddingBottom="8dip" >
	    
			    <ImageView 
			        android:id="@+id/azImage"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:src="@drawable/ic_az"
			        android:layout_marginLeft="10dip"/>
		        
			    <TextView
			        android:id="@+id/azText"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/ascending"
			        android:layout_gravity="center_vertical"
			        android:textColor="#1F1F21"
			        android:textSize="16sp" 
			        android:fontFamily="sans-serif-light" 
			        android:layout_marginLeft="10dip"/>
	    
			</LinearLayout>
	    
			<LinearLayout 
		        android:id="@+id/descending"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" 
			    android:paddingTop="8dip"
			    android:paddingBottom="8dip">
	    
			    <ImageView 
			        android:id="@+id/zaImage"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:src="@drawable/ic_za"
			        android:layout_marginLeft="10dip"/>
		        
			    <TextView
			        android:id="@+id/zaText"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/descending"
			        android:layout_gravity="center_vertical"
			        android:textColor="#1F1F21"
			        android:textSize="16sp" 
			        android:fontFamily="sans-serif-light" 
			        android:layout_marginLeft="10dip"/>
	    
			</LinearLayout>
	    
			<LinearLayout 
		        android:id="@+id/num_ascending"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" 
			    android:paddingTop="8dip"
			    android:paddingBottom="8dip">
	    
			    <ImageView 
			        android:id="@+id/num_ascendingImage"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:src="@drawable/ic_numasc"
			        android:layout_marginLeft="10dip"/>
		        
			    <TextView
			        android:id="@+id/numascText"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/num_asc"
			        android:layout_gravity="center_vertical"
			        android:textColor="#1F1F21"
			        android:textSize="16sp" 
			        android:fontFamily="sans-serif-light" 
			        android:layout_marginLeft="10dip"/>
	    
			</LinearLayout>
	    
			<LinearLayout 
		        android:id="@+id/num_descending"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" 
			    android:paddingTop="8dip"
			    android:paddingBottom="8dip">
	    
			    <ImageView 
			        android:id="@+id/num_descendingImage"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center_vertical"
			        android:src="@drawable/ic_numdesc"
			        android:layout_marginLeft="10dip"/>
		        
			    <TextView
			        android:id="@+id/numdescText"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/num_desc"
			        android:layout_gravity="center_vertical"
			        android:textColor="#1F1F21"
			        android:textSize="16sp" 
			        android:fontFamily="sans-serif-light" 
			        android:layout_marginLeft="10dip"/>
	    
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
